@@ -1,3 +1,4 @@
+// { dg-do run { xfail { powerpc*-*-linux* && broken_cplxf_arg } } }
 // PR libstdc++/10689
 // Origin: Daniel.Levine@jhuaph.edu
 // { dg-options "-mieee" { target alpha*-*-* } }
